# ZipGraph

./: .gitattributes  .gitignore  .tarpaulin.toml  CHANGELOG.md  CLEANUP_SUMMARY.md  Cargo.toml  DEMO_INSTRUCTIONS.md  DEMO_READY.md  PROJECT_STRUCTURE.md  README.md  RELEASE_SUMMARY.md  UPDATE_NOTES.md  V0.3_COMPLETE.md  V0.3_SUMMARY.md  demo.sh  fix-github-lang.sh  quick_start.sh
benchmarks/: compare_networkx.py
coverage/: lcov.info  tarpaulin-report.html
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  QUICK_START.md  ROADMAP.md  V0.2_FEATURES.md  V0.3_ROADMAP.md
docs/demo/: DEMO_GUIDE.md  DEMO_READY.md  DEMO_REFERENCE.md
docs/release-notes/: 32_TESTS_PASSING.md  BUILD_COMPLETE.md  ERRORS_FIXED.md  RELEASE_v0.2.0.md  V1.0_COMPLETE.md
examples/: basic_usage.rs  fraud_detection.rs  performance_comparison.rs  recommendation_engine.rs  social_network.rs  ultra_benchmark.rs
release/: SHA256SUMS.txt
release/zipgraph-v1.0.0-arm64-darwin/: README.txt  install.sh
release/zipgraph-v1.0.0-arm64-darwin/docs/: CHANGELOG.md  README.md  RELEASE_PLAN.md
release/zipgraph-v1.0.0-arm64-darwin/examples/: basic_usage  fraud_detection  recommendation_engine  social_network
release/zipgraph-v1.0.0-arm64-darwin/lib/: libzipgraph_core.rlib  libzipgraph_ml.rlib  libzipgraph_optimizer.rlib
scripts/: build-release.sh
zipgraph-bench/: Cargo.toml
zipgraph-bench/benches/: algorithm_comparison.rs  graph_operations.rs  ml_performance.rs
zipgraph-core/: Cargo.toml
zipgraph-core/src/: algorithms.rs  centrality.rs  error.rs  graph.rs  lib.rs  metrics.rs  parallel.rs  stats.rs  storage.rs  types.rs  ultra.rs
zipgraph-core/tests/: core_tests.rs
zipgraph-ml/: Cargo.toml
zipgraph-ml/src/: algorithm_selector.rs  anomaly.rs  embeddings.rs  error.rs  features.rs  lib.rs
zipgraph-optimizer/: Cargo.toml
zipgraph-optimizer/src/: cache.rs  error.rs  lib.rs  optimizer.rs  query.rs
