[workspace]
resolver = "2"
members = [
    "zipgraph-core",
    "zipgraph-ml",
    "zipgraph-optimizer",
    "zipgraph-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wesley Scholl"]
license = "MIT"
repository = "https://github.com/wesleyscholl/zipgraph"
homepage = "https://github.com/wesleyscholl/zipgraph"
documentation = "https://docs.rs/zipgraph"
keywords = ["graph", "ml", "optimization", "performance", "ai"]
categories = ["algorithms", "data-structures", "science", "mathematics"]

[workspace.dependencies]
# Core graph processing
petgraph = "0.6"
ndarray = "0.15"
ndarray-linalg = "0.16"

# ML and scientific computing
candle-core = "0.7"
candle-nn = "0.7"
tract-core = "0.21"
tract-onnx = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Performance and utilities
rayon = "1.10"
parking_lot = "0.12"
dashmap = "6.0"
ahash = "0.8"
smallvec = "1.13"

# Random and hashing
rand = "0.8"
rand_distr = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing and benchmarking
criterion = "0.5"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
