[workspace]
resolver = "2"
members = [
    "zipgraph-core",
    "zipgraph-ml",
    "zipgraph-optimizer",
    "zipgraph-bench",
]

[package]
name = "zipgraph"
version = "1.0.0"
edition = "2021"
authors = ["Wesley Scholl"]
license = "MIT"

[dependencies]
zipgraph-core = { path = "./zipgraph-core" }
zipgraph-ml = { path = "./zipgraph-ml" }
zipgraph-optimizer = { path = "./zipgraph-optimizer" }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "recommendation_engine"
path = "examples/recommendation_engine.rs"

[[example]]
name = "fraud_detection"
path = "examples/fraud_detection.rs"

[[example]]
name = "social_network"
path = "examples/social_network.rs"

[[example]]
name = "performance_comparison"
path = "examples/performance_comparison.rs"

[[example]]
name = "ultra_benchmark"
path = "examples/ultra_benchmark.rs"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Wesley Scholl"]
license = "MIT"
repository = "https://github.com/wesleyscholl/zipgraph"
homepage = "https://github.com/wesleyscholl/zipgraph"
documentation = "https://docs.rs/zipgraph"
keywords = ["graph", "ml", "optimization", "performance", "ai"]
categories = ["algorithms", "data-structures", "science", "mathematics"]

[workspace.dependencies]
# Core graph processing
petgraph = "0.6"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-linalg = "0.16"

# ML and scientific computing (optional features for now)
# candle-core = "0.7"
# candle-nn = "0.7"
tract-core = "0.21"
tract-onnx = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Performance and utilities
rayon = "1.10"
parking_lot = "0.12"
dashmap = "6.0"
ahash = "0.8"
smallvec = "1.13"

# Random and hashing
rand = "0.8"
rand_distr = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing and benchmarking
criterion = "0.5"
proptest = "1.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
