[package]
name = "zipgraph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Core graph data structures and algorithms for ZipGraph"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
petgraph = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
