[package]
name = "zipgraph-ml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Machine learning components for ZipGraph"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal dependencies
zipgraph-core = { path = "../zipgraph-core" }

# Workspace dependencies
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
# candle-core = { workspace = true }
# candle-nn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
